--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -486,8 +486,8 @@ p.grow {
 }
 
 .education-img {
-  width: 250px;
-  height: 200px;
+  width: 155px;
+  aspect-ratio: 1/1;
   border-radius: 30px;
   object-fit: cover;
 }
